--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
     <div class="output-container">
 
         <div class="essential-info">
-            <div class="description-container"><span class="description"></span></div>
+            <div class="essential-info-text-container">
+                <div class="description"></div>
 
-            <div class="city-and-country">
-                <span class="city"></span>, <span class="country"></span>
+                <div class="city-and-country">
+                    <span class="city"></span>, <span class="country"></span>
+                </div>
+    
+                <div class="temp"></div>
             </div>
-
-            <div class="temp"></div>
         </div>
 
         <div class="extra-info">
