changed class names form cel, fah to metric, imperial

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div>
-            <button type="button" class="cel" id="unit-switch-button">°F</button>
+            <button type="button" class="metric" id="unit-switch-button">°F</button>
         </div>
     </form>
 
@@ -33,15 +33,15 @@
                     <span class="city"></span>, <span class="country"></span>
                 </div>
     
-                <div class="temp temp-unit cel"></div>
+                <div class="temp temp-unit metric"></div>
             </div>
         </div>
 
         <div class="extra-info">
-            <div class="feels-like-container temp-unit cel">feels like: <span class="feels-like"></span></div>
+            <div class="feels-like-container temp-unit metric">feels like: <span class="feels-like"></span></div>
             <div class="humidity-container">humidity: <span class="humidity"></span></div>
-            <div class="max-temp-container temp-unit cel">max temperature: <span class="max-temp"></span></div>
-            <div class="min-temp-container temp-unit cel">min temperature: <span class="min-temp"></span></div>
+            <div class="max-temp-container temp-unit metric">max temperature: <span class="max-temp"></span></div>
+            <div class="min-temp-container temp-unit metric">min temperature: <span class="min-temp"></span></div>
         </div>
     </div>
 </body>
