imperial, metric switiching works now

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div>
-            <button type="button" class="metric" id="unit-switch-button">°F</button>
+            <button type="button" class="unit-switch-button" id="metric">°F</button>
         </div>
     </form>
 
