added error handling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </div>
     </form>
 
+    <div class="error-container">
+        <div class="error-content"></div>
+        <div class="error-close-button">+</div>
+    </div>
+
     <div class="output-container">
 
         <div class="essential-info">
@@ -38,7 +43,7 @@
 
         <div class="extra-info">
             <div class="feels-like-container temp-unit metric">feels like: <span class="feels-like"></span></div>
-            <div class="humidity-container">humidity: <span class="humidity"></span></div>
+            <div class="humidity-container">humidity: <span class="humidity"></span> %</div>
             <div class="max-temp-container temp-unit metric">max temperature: <span class="max-temp"></span></div>
             <div class="min-temp-container temp-unit metric">min temperature: <span class="min-temp"></span></div>
         </div>
