added transition to diaplay data. also fixed error-container not hiding for next valid search

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="error-close-button">+</div>
     </div>
 
-    <div class="output-container">
+    <div class="output-container hidden">
 
         <div class="essential-info">
             <div class="essential-info-text-container">
